--- a/bottom-bar/src/main/res/layout/bb_bottom_bar_item_container.xml
+++ b/bottom-bar/src/main/res/layout/bb_bottom_bar_item_container.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="4dp"
             android:layout_gravity="bottom"
-            android:visibility="gone"
+            android:visibility="visible"
             android:src="@drawable/bb_bottom_bar_top_shadow"/>
 
     </FrameLayout>
