--- a/bottom-bar/src/main/res/values/styles.xml
+++ b/bottom-bar/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
     </style>
 
     <style name="BB_BottomBarItem_Fixed.Title" parent="TextAppearance.AppCompat.Body1">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:singleLine">true</item>
         <item name="android:gravity">center_horizontal</item>
     </style>
