--- a/bottom-bar/src/main/res/values/styles.xml
+++ b/bottom-bar/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">8dp</item>
-        <item name="android:paddingBottom">10dp</item>
+        <!--<item name="android:paddingBottom">10dp</item>-->
         <item name="android:paddingLeft">12dp</item>
         <item name="android:paddingRight">12dp</item>
     </style>
@@ -16,6 +16,8 @@
         <item name="android:textSize">14dp</item>
         <item name="android:singleLine">true</item>
         <item name="android:gravity">center_horizontal</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:includeFontPadding">false</item>
     </style>
 
     <style name="BB_BottomBarItem_Shifting">
