--- a/bottom-bar/src/main/res/layout/bb_bottom_bar_item_container.xml
+++ b/bottom-bar/src/main/res/layout/bb_bottom_bar_item_container.xml
@@ -39,13 +39,13 @@
     <FrameLayout
         android:id="@+id/bb_bottom_bar_outer_container"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
 
         <LinearLayout
             android:id="@+id/bb_bottom_bar_item_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="#00000000"
             android:gravity="center_horizontal"
             android:orientation="horizontal" />
